--- a/index.html
+++ b/index.html
@@ -142,32 +142,31 @@ const cartaExtra = document.getElementById("cartaExtra");
 const extraBtn = document.getElementById("extraBtn");
 
 const textos = [
-"HOLAAAAAAAAAAAAAA jajajajja para que veas que mi titulo no fue gratis y soy una maquina programando",
+"HOLAAAAAAAAAAAAAA jajajaja, esto es para ti",
 "Queria hacer esto para ti para que intentar hacer las cosas diferentes",
 "Por ende...",
 "Que veas que todo esto es con mucho cariño",
 "Y siempre lo sera",
 "Aunque yo note que las cosas en ti fueron cambiando mi estilo y mi manera de verte siempre fue la misma",
-"Estas viendo la version maaaaas ridicula pero que mejor se me da",
-"Porque valoro todo el tiempo que haz estado conmigo sin pensar en que haya sido en persona o frente a una pantalla",
+"Estas siendo conciente de como soy con esto",
+"Porque valoro todo el tiempo que haz estado conmigo sin pensar en que haya sido en persona o frente de una pantalla",
 "Sin embargo creo que noto que las cosas siguen igual con tu cambio repentino de actitud nadie me quita lo feliz que e sido teniéndote a mi lado",
 "Imaginando cosas",
-"por las",
-"por las mismas ilusionandome solo y que se yo imaginando cosas que no",
-"Hoy fue el tortazo...",
-"Ya que no es nada nuevo ese cambio tan raro en ti estos ultimos 3 meses",
+"por las mismas ilusionandome solo e imaginando cosas que no",
+"Hoy sin duda fue lo mas claro",
+"Ya que no es nada nuevo ese cambio tan raro en ti estos ultimos meses",
 "Me hubiese gustado no haberlo notado",
 "Pero en ti es muy facil saber cuando las cosas estan bien o estan mal",
 "Por eso aseguro que tu te haz distanciado sin querer, talvez sin notarlo quiza, pensar que todo en tu camino esta bien",
-"Pero yo te digo que no, al menos conmigo, pareciera que lo que menos esperas en el dia es mi mensaje, por eso molestaba mucho jajaja con que aaaaaa me odias y eso",
+"Pero yo te digo que no, al menos conmigo, pareciera que lo que menos esperas en el dia es mi mensaje, por eso molestaba mucho con que me odias y eso",
 "No importa, no es la primera vez por eso aunque notaba eso yo no lo daba por hecho pero es facil darse cuenta porque actuas asi, no te culpo cualquiera lo haria estando en tu posicion",
 "Aun asi me quedo con la mejor version de ti, en la que sin dudar recien te conocia y juro que eres la mujer ideal",
-"Cuando molestabamos con enseñarnos cosas, nadar de espalda, la tecnica del macaco, cuando no habia momento en el que no me decia que tu familia te mojo, cuando me deseabas mucha suerte en las practicas, jugabamos roblox yo estando trabajando jajaja, cuando sin pensarlo me mostrabas cualquier cosa en tu habitacion, tus carcacas, tus uñas, te pelo cortado o pintado, tus uñas, me contabas todo de ti",
+"Cuando molestabamos con enseñarnos cosas, nadar de espalda, la tecnica del macaco, cuando no habia momento en el que no me decia que tu familia te mojo, cuando me deseabas mucha suerte en las practicas, jugabamos roblox yo estando trabajando jajaja, cuando sin pensarlo me mostrabas cualquier cosa en tu habitacion, tus carcacas, te pelo cortado o pintado, tus uñas, me contabas todo de ti",
 "Eras un libro abierto el cual yo podia escribir",
 "Pero despues de todo te siento mas feliz mas centrada en algo",
 "Al final del dia eso es lo que me importa mas",
 "Nunca dudes de increible que eres, yo no lo hago",
-"Pero lo seguire haciendo desde lejos... te quiero mucho."
+"Y lo seguire haciendo... te quiero mucho."
 ];
 
 let index=0;
